# vivicad-ng

./: .Containerfile (Case Conflict).swp  .gitignore  Containerfile  README.md  env.yml  environment.yaml  pyproject.toml  readme.md
examples/: Untitled.ipynb  tutorial.ipynb
